system/argocd/resources/argocd-image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-image-updater
    app.kubernetes.io/part-of: argocd-image-updater
  name: argocd-image-updater
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-image-updater
    spec:
      containers:
        - command:
          - /usr/local/bin/argocd-image-updater
          - run
          image: quay.io/argoprojlabs/argocd-image-updater:v0.13.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          name: argocd-image-updater
          ports:
            - containerPort: 8080
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /app/config
              name: image-updater-conf
            - mountPath: /app/config/ssh
              name: ssh-known-hosts
            - mountPath: /app/.ssh
              name: ssh-config
      serviceAccountName: argocd-image-updater
      volumes:
        - configMap:
            items:
              - key: registries.conf
                path: registries.conf
              - key: git.commit-message-template
                path: commit.template
            name: argocd-image-updater-config
            optional: true
          name: image-updater-conf
        - configMap:
            name: argocd-ssh-known-hosts-cm
            optional: true
          name: ssh-known-hosts
        - configMap:
            name: argocd-image-updater-ssh-config
            optional: true
          name: ssh-config
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-image-updater
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-image-updater
spec:
  ports:
  - name: metrics
    port: 8081
    targetPort: 8081
  selector:
    app.kubernetes.io/name: argocd-image-updater
---
# uncomment if we have prometheus operator installed
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: argocd-image-updater
#   namespace: monitoring
#   labels:
#     release: kube-prometheus-stack
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: argocd-image-updater
#   endpoints:
#   - port: metrics
#     interval: 30s
#     path: /metrics
#   namespaceSelector:
#     matchNames:
#     - argocd
